# eetFestijn

./: .gitignore  .travis.yml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: pythonapp.yml
eetfestijn/: settings.py  urls.py
meals/: admin.py  forms.py  models.py  urls.py  views.py
meals/migrations/: 0003_auto_20191020_2107.py
meals/templates/meals/: meal.html
orders/: admin.py  models.py  tests.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0023_auto_20180620_1442.py  0023_new_prices.py  0024_auto_20191020_2107.py
orders/static/orders/: script.js
orders/templates/orders/: index.html  overview.html  printscript.html  receipts.html  summary.html
orders/templatetags/: absolute_reverse_url.py  display_euro.py  git_head.py
resources/: entrypoint_production.sh
templates/eetfestijn/: index.html
wiebetaaltwat/: admin.py  models.py  tests.py  urls.py  views.py
wiebetaaltwat/migrations/: 0003_auto_20171016_1614.py
