[tool.poetry]
name = "eetFestijn"
version = "0.1.0"
description = ""
authors = ["Thalia Technicie <www@thalia.nu>"]
license = "CC0"

[tool.poetry.dependencies]
python = "^3.7"
Django = "~2.0"
django-bootstrap3 = "~11"
python-dateutil = "2.8.0"
requests = "2.22.0"
uWSGI = "~2.0"
weasyprint = "^50"

[tool.poetry.dev-dependencies]
tox = "~3.14"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
